deployments/security/2-allow-probes.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-probes
spec:
 action: ALLOW
 rules:
 - to:
   - operation:
       methods: ["GET"]
       paths: ["/live", "/ready"]
