deployments/security/3-allow-ingress-delayed.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-ingress-delayed-server
spec:
 selector:
   matchLabels:
     app: delayed-server
 action: ALLOW
 rules:
 - from:
   - source:
       namespaces: ["istio-system", "kube-system"]
