deployments/security/5-allow-ingress-rocksolid.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-ingress-rocksolid
spec:
 selector:
   matchLabels:
     app: rocksolid
 action: ALLOW
 rules:
 - from:
   - source:
       namespaces: ["istio-system", "kube-system"]
